src/objects/FSTR__PCE_Step_Approval_Item__c.object
<CustomObject>
    <fields>
        <fullName>FSTR__Approval_Status__c</fullName>
        <label>Approval Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This user is assigned to approve this step</inlineHelpText>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PCE_Step_Approval_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Recalled_Status__c</fullName>
        <label>Recalled Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Rejection_Status__c</fullName>
        <label>Rejection Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Step__c</fullName>
        <inlineHelpText>This step is associated with the approval</inlineHelpText>
        <label>Step</label>
        <referenceTo>FSTR__PCE_Step__c</referenceTo>
        <relationshipLabel>Step Approval Items</relationshipLabel>
        <relationshipName>PCE_Step_Approval_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Step Approval Item</label>
    <nameField>
        <displayFormat>T{000000}</displayFormat>
        <label>Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Step Approval Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>